Revert "APERTA-10978 flexbox used to fix shifting label"
This reverts commit 180411444a5ffc13c1ad3e0cb2181156cbebc77b.

--- a/app/assets/stylesheets/components/card-content/check-box.scss
+++ b/app/assets/stylesheets/components/card-content/check-box.scss
@@ -3,11 +3,3 @@
         margin-top: 15px;
     }
 }
-
-div.card-content-flex-box {
-  display: inline-flex;
-
-  div.flex-label {
-    padding: 0em .5em;
-  }
-}
